# ming-wm

./: .gitignore  Cargo.toml  README.md  build.rs  install  local-install
bmps/nimbus-roman/: ".alpha  #.alpha  $.alpha  &.alpha  '.alpha  (.alpha  ).alpha  *.alpha  0.alpha  1.alpha  3.alpha  5.alpha  7.alpha  8.alpha  ;.alpha  ?.alpha  A.alpha  B.alpha  C.alpha  D.alpha  E.alpha  G.alpha  H.alpha  I.alpha  K.alpha  M.alpha  N.alpha  O.alpha  Q.alpha  R.alpha  S.alpha  T.alpha  U.alpha  V.alpha  W.alpha  X.alpha  Y.alpha  [.alpha  ].alpha  _.alpha  (+20 more)
bmps/nimbus-romono/: !.alpha  %.alpha  +.alpha  ,.alpha  0.alpha  2.alpha  4.alpha  6.alpha  9.alpha  :.alpha  <.alpha  =.alpha  >.alpha  @.alpha  A.alpha  F.alpha  G.alpha  H.alpha  J.alpha  K.alpha  L.alpha  M.alpha  N.alpha  O.alpha  P.alpha  Q.alpha  R.alpha  U.alpha  V.alpha  W.alpha  X.alpha  Y.alpha  Z.alpha  ^.alpha  a.alpha  b.alpha  d.alpha  i.alpha  j.alpha  k.alpha  (+9 more)
bmps/shippori-mincho/: ぁ.alpha  あ.alpha  い.alpha  う.alpha  え.alpha  お.alpha  か.alpha  が.alpha  き.alpha  ぎ.alpha  く.alpha  ぐ.alpha  け.alpha  げ.alpha  こ.alpha  ご.alpha  さ.alpha  ざ.alpha  し.alpha  じ.alpha  す.alpha  ず.alpha  せ.alpha  ぜ.alpha  そ.alpha  ぞ.alpha  た.alpha  だ.alpha  ち.alpha  ぢ.alpha  っ.alpha  つ.alpha  づ.alpha  て.alpha  で.alpha  と.alpha  ど.alpha  な.alpha  に.alpha  ぬ.alpha  (+37 more)
bmps/times-new-roman/: ".alpha  $.alpha  &.alpha  (.alpha  ).alpha  *.alpha  +.alpha  ,.alpha  -.alpha  0.alpha  4.alpha  6.alpha  7.alpha  ;.alpha  >.alpha  @.alpha  A.alpha  B.alpha  D.alpha  E.alpha  G.alpha  H.alpha  J.alpha  K.alpha  L.alpha  M.alpha  N.alpha  O.alpha  P.alpha  Q.alpha  R.alpha  S.alpha  U.alpha  V.alpha  W.alpha  X.alpha  Y.alpha  Z.alpha  `.alpha  b.alpha  (+17 more)
bmps/times-new-romono/: !.alpha  #.alpha  %.alpha  '.alpha  0.alpha  1.alpha  2.alpha  3.alpha  5.alpha  8.alpha  9.alpha  :.alpha  ;.alpha  <.alpha  =.alpha  ?.alpha  A.alpha  C.alpha  D.alpha  F.alpha  G.alpha  H.alpha  I.alpha  K.alpha  M.alpha  N.alpha  O.alpha  Q.alpha  R.alpha  T.alpha  U.alpha  V.alpha  W.alpha  X.alpha  Y.alpha  [.alpha  ].alpha  ^.alpha  _.alpha  a.alpha  (+15 more)
docs/: philosophy.md
docs/system/: README.md  fonts.md  integration.md  keys.md  shortcuts.md  writing_windows.md
docs/window-likes/: audio-player.md  desktop-background.md  draw.md  file-explorer.md  lock-screen.md  malvim.md  minesweeper.md  onscreen-keyboard.md  reversi.md  start-menu.md  terminal.md
linux/: Cargo.toml
linux/src/: fb.rs  input.rs  keys.rs  lib.rs  pty.rs  raw.rs
ming-wm-lib/: Cargo.toml  README.md
ming-wm-lib/src/: fonts.rs  framebuffer_types.rs  ipc.rs  lib.rs  logging.rs  messages.rs  serialize.rs  themes.rs  utils.rs  window_manager_types.rs
ming-wm-lib/src/components/: highlight_button.rs  mod.rs  paragraph.rs  press_button.rs  toggle_button.rs
src/: dirs.rs  framebuffer.rs  fs.rs  ipc.rs  keyboard.rs  lib.rs  logging.rs  main.rs  messages.rs  proxy_window_like.rs  serialize.rs  themes.rs  utils.rs  window_manager.rs
src/components/: highlight_button.rs  mod.rs  paragraph.rs  press_button.rs  toggle_button.rs
src/essential/: about.rs  desktop_background.rs  help.rs  lock_screen.rs  mod.rs  onscreen_keyboard.rs  start_menu.rs  taskbar.rs  workspace_indicator.rs
src/window_likes/: audio_player.rs  desktop_background.rs  lock_screen.rs  malvim.rs  minesweeper.rs  mod.rs  start_menu.rs  taskbar.rs  terminal.rs  workspace_indicator.rs
wm/: Cargo.toml
wm/linux/src/: keys.rs  lib.rs
wm/src/: framebuffer.rs  fs.rs  lib.rs  proxy_window_like.rs  window_manager.rs
wm/src/essential/: about.rs  desktop_background.rs  help.rs  lock_screen.rs  mod.rs  onscreen_keyboard.rs  start_menu.rs  taskbar.rs
