[package]
name = "ming-wm"
version = "0.1.0"
edition = "2024"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bmp-rust = "0.4.1"
blake2 = { version = "0.10.6", default-features = false }

[dependencies]
blake2 = { version = "0.10.6", default-features = false }
linux_framebuffer = { package = "framebuffer", version = "0.3.1" }
termion = { version = "4.0.3", optional = true }
rodio = { version = "0.19.0", optional = true }
rand = { version = "0.9.0", default-features = false, features = [ "small_rng" ], optional = true }
id3 = { version = "1.10.0", optional = true }
mp4ameta = { version = "0.11.0", optional = true }
metaflac = { version = "0.2.5", optional = true }
bmp-rust = "0.4.1"
pty-process = { version = "0.5.1", optional = true }

[features]
default = [ "main", "terminal" ]
main = [ "termion" ]
terminal = [ "pty-process" ]
audio_player = [ "id3", "mp4ameta", "metaflac", "rand", "rodio" ]

[profile.release]
lto = true

[[bin]]
name = "main"
required-features = [ "main" ]

[[bin]]
name = "audio_player"
required-features = [ "audio_player" ]

[[bin]]
name = "terminal"
required-features = [ "terminal" ]
