[package]
name = "ming-wm"
version = "1.0.0"
repository = "https://github.com/stjet/ming-wm"
license = "GPL-3.0-or-later"
edition = "2021"
default-run = "ming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["linux"]

[build-dependencies]
bmp-rust = "0.5.0"
blake2 = { version = "0.10.6", default-features = false }

[dependencies]
ming-wm-lib = { path = "ming-wm-lib" }
blake2 = { version = "0.10.6", default-features = false }
linux = { path = "linux" }
termion = { version = "4.0.3", optional = true }
rodio = { version = "0.19.0", default-features = false, features = [ "flac", "mp3", "symphonia-vorbis", "wav" ], optional = true }
rand = { version = "0.9.0", default-features = false, features = [ "small_rng" ], optional = true }
id3 = { version = "1.10.0", optional = true }
mp4ameta = { version = "0.11.0", optional = true }
metaflac = { version = "0.2.5", optional = true }
bmp-rust = "0.5.0"
pty-process = { version = "0.5.1", optional = true }

[features]
default = [ "main", "terminal" ]
main = [ "termion" ]
terminal = [ "pty-process" ]
audio_player = [ "id3", "mp4ameta", "metaflac", "rand", "rodio" ]

[profile.release]
lto = true

[[bin]]
name = "ming"
path = "src/bin/main.rs"
required-features = [ "main" ]

[[bin]]
name = "mingFiles_Audio_Player"
path = "src/bin/audio_player.rs"
required-features = [ "audio_player" ]

[[bin]]
name = "mingGames_Minesweeper"
path = "src/bin/minesweeper.rs"

[[bin]]
name = "mingUtils_Terminal"
path = "src/bin/terminal.rs"
required-features = [ "terminal" ]

[[bin]]
name = "mingFiles_File_Explorer"
path = "src/bin/file_explorer.rs"

[[bin]]
name = "mingEditing_Malvim"
path = "src/bin/malvim.rs"

[[bin]]
name = "mingGames_Reversi"
path = "src/bin/reversi.rs"
