[package]
name = "ming-wm"
version = "1.2.0-beta.0"
repository = "https://github.com/stjet/ming-wm"
license = "GPL-3.0-or-later"
edition = "2021"
default-run = "ming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "wm", "linux" ]

[build-dependencies]
bmp-rust = "0.5.0"
bitcoin_hashes = { version = "0.16.0", default-features = false }

[dependencies]
ming-wm-lib = { path = "ming-wm-lib" }
wm = { path = "wm", optional = true }
linux = { path = "linux", optional = true }
rodio = { version = "0.19.0", default-features = false, features = [ "flac", "mp3", "symphonia-vorbis", "wav" ], optional = true }
rand = { version = "0.9.0", default-features = false, features = [ "small_rng" ], optional = true }
id3 = { version = "1.10.0", optional = true }
mp4ameta = { version = "0.11.0", optional = true }
metaflac = { version = "0.2.5", optional = true }

[features]
default = [ "wm", "terminal" ]
terminal = [ "linux" ]
audio_player = [ "id3", "mp4ameta", "metaflac", "rand", "rodio" ]

[profile.release]
lto = true

[[bin]]
name = "ming"
path = "src/bin/wm.rs"
required-features = [ "wm" ]

[[bin]]
name = "mingFiles_Audio_Player"
path = "src/bin/audio_player.rs"
required-features = [ "audio_player" ]

[[bin]]
name = "mingGames_Minesweeper"
path = "src/bin/minesweeper.rs"

[[bin]]
name = "mingUtils_Terminal"
path = "src/bin/terminal.rs"
required-features = [ "terminal" ]

[[bin]]
name = "mingFiles_File_Explorer"
path = "src/bin/file_explorer.rs"

[[bin]]
name = "mingEditing_Malvim"
path = "src/bin/malvim.rs"

[[bin]]
name = "mingGames_Reversi"
path = "src/bin/reversi.rs"

[[bin]]
name = "mingUtils_Draw"
path = "src/bin/draw.rs"