[package]
name = "wm"
version = "1.0.3"
repository = "https://github.com/stjet/ming-wm"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
ming-wm-lib = { path = "../ming-wm-lib" }
linux = { path = "linux" }
blake2 = { version = "0.10.6", default-features = false }
termion = { version = "4.0.3" }
bmp-rust = "0.5.0"

